26 Jul 2003 mipsator
 * added dir_recurse() in pmkscan to make it scanning a complete tree.
 * added missing function comments in parse.c .
 * added prsdata_destroy().
 * re-enable error messages in parse().
 * added init checks.

# snapshot 0.5.2

24 Jul 2003 mipsator
 * added dir_explore() as first step to recursivity.

23 Jul 2003 mipsator
 * added detection and processing of functions in pmkscan.
 * replaced free() by hash_free_hcell() where needed in hash.
 * misc in pmkscan.
 * fixed ac_process_dyn_var().
 * another misc changes in pmkscan.
 * two other fixes in hash.

22 Jul 2003 mipsator
 * rewritten hash_keys() to return a new structure (hkeys).
 * fix use of hash_keys() in sources.

21 Jul 2003 mipsator
 * added output_file() and misc in pmkscan.
 * improved hash functions to work with (void*) instead of (char*).
 * update all files that use hash_add() and hash_get().
 * improve pmkscan for data parsing and output file.
 * updated data/pmkscan.dat file.
 * updated Makefile to install pmkscan.
 * use USER_TEST to define where to find pmkscan.dat file.

19 Jul 2003 mipsator
 * updated STATUS
 * fixed test/Makefile for portability.
 * misc in pmkscan (not debugged).

# snapshot 0.5.1

17 Jul 2003 mipsator
 * added a check for _Bool type (fix for Tru64 >= 5.x ans solaris 9).

16 Jul 2003 mipsator
 * misc changes in pmkscan.c to use regex.
 * added sub versions for all tools.
 * added display of subversion and snapversion in debug mode.
 * misc replacements in pmksetup.
 * misc checks.
 * added pmkscan in Makefile.
 * added missing pmkscan.dat in data.

15 Jul 2003 mipsator
 * add parse.c and parse.h with a new shared parsing engine.
 * add pmkscan.c and pmkscan.h, this is preliminary and unusable code.
 * pmk now use the new parsing engine.

05 Jul 2003 mipsator
 * added c++ in the binary list of pmksetup.
 * modified get_lang().
 * added c++ support in pmk_check_include() and pmk_check_library().
 * updated pmkfile sample to use c++ in one test.
