@@ -1,3 +1,7 @@
+28 Jul 2003 mipsator
+ * improved dir_explore().
+ * added scanning support for c++ files.
+
 26 Jul 2003 mipsator
  * added dir_recurse() in pmkscan to make it scanning a complete tree.
  * added missing function comments in parse.c .
